Further progress on IE8/iPad layout issues.

--- a/sass/lt-ie9.scss
+++ b/sass/lt-ie9.scss
@@ -28,11 +28,13 @@
 
 
 @include widest{
-
-#page{
-	background-color:cyan;
-	#band{
-		
+	.lt-ie9{
+		#page{
+			//background-color:cyan;
+			#band{
+				
+			}
+		}
 	}
 }
 }
